force-app/main/default/objects/Exception_Log__c/fields/Bypass_Retry_Exception__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Retry_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Retry Exception</label>
    <type>Checkbox</type>
</CustomField>