force-app/main/default/objects/Exception_Log__c/fields/ConvertedToDefect__c.field-meta.xml
<CustomField>
    <fullName>ConvertedToDefect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted To Defect</label>
    <type>Checkbox</type>
</CustomField>