force-app/main/default/objects/Exception_Log__c/fields/Data_Log__c.field-meta.xml
<CustomField>
    <fullName>Data_Log__c</fullName>
    <label>Data Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>