force-app/main/default/objects/Exception_Log__c/fields/Exception_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Exception_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Resolved</label>
    <type>Checkbox</type>
</CustomField>