force-app/main/default/objects/Exception_Log__c/fields/Exception_Retry_Complete__c.field-meta.xml
<CustomField>
    <fullName>Exception_Retry_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Retry Complete</label>
    <type>Checkbox</type>
</CustomField>