force-app/main/default/objects/Exception_Log__c/fields/ExceptionCode__c.field-meta.xml
<CustomField>
    <fullName>ExceptionCode__c</fullName>
    <label>Exception Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>