force-app/main/default/objects/Exception_Log__c/fields/ExceptionDescription__c.field-meta.xml
<CustomField>
    <fullName>ExceptionDescription__c</fullName>
    <label>Exception Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>