force-app/main/default/objects/Exception_Log__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <label>Exception Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>