force-app/main/default/objects/Exception_Log__c/fields/High_Priority_triggered__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Priority triggered</label>
    <type>Checkbox</type>
</CustomField>