force-app/main/default/objects/Exception_Log__c/fields/IsHandled__c.field-meta.xml
<CustomField>
    <fullName>IsHandled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Handled</label>
    <type>Checkbox</type>
</CustomField>