force-app/main/default/objects/Exception_Log__c/fields/NumberOfTimesOccured__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTimesOccured__c</fullName>
    <label>Number of Times Occured</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>