force-app/main/default/objects/Exception_Log__c/fields/Salesforce_Ids__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Ids__c</fullName>
    <label>Salesforce Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>