force-app/main/default/objects/Exception_Log__c/fields/WSCallingApplication__c.field-meta.xml
<CustomField>
    <fullName>WSCallingApplication__c</fullName>
    <label>WS CallingApplication</label>
    <length>100</length>
    <type>Text</type>
</CustomField>