force-app/main/default/objects/Exception_Log__c/fields/WSTransactionID__c.field-meta.xml
<CustomField>
    <fullName>WSTransactionID__c</fullName>
    <label>WS TransactionID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>