force-app/main/default/objects/Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>ExceptionDetails__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>